--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default" # Currently available options are "default", "air"
+site_theme               : "air" # Currently available options are "default", "air"
 title                    : "Khor Xiong Yean Homepage"
-title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+title_separator          : "."
+name                     : &name "XY"
+description              : &description "i am very tall and muscular"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[taty-pain].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -22,14 +22,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "Screenshot 2025-09-06 085845.png"
+  name             : "XY Khor"
+  pronouns         : # example: "tall/smart"  
+  bio              : "Please sponsor me a 3d printer"
+  location         : "Sun"
+  employer         : "Chung Ling Private High School"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "khorxiongyean@gmail.com" 
 
   # Academic websites
   academia         : # URL
